# acptorio

./: .gitignore  ARCHITECTURE.md  FACTORIO_VIEW_PLAN.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/acp/: codec.rs  messages.rs  mod.rs  protocol.rs
src-tauri/src/agent/: manager.rs  message_processor.rs  mod.rs  pool.rs  process.rs
src-tauri/src/commands/: agent_cmds.rs  factory_cmds.rs  fs_cmds.rs  mod.rs  registry_cmds.rs
src-tauri/src/filesystem/: fog.rs  mod.rs  scanner.rs  watcher.rs
src-tauri/src/registry/: binary.rs  mod.rs  service.rs  types.rs
src-tauri/src/state/: app_state.rs  factory.rs  metrics.rs  mod.rs
src-tauri/tests/: acp_integration_test.rs  agent_process_test.rs  registry_e2e_test.rs
src/components/command/: CommandPanel.tsx  TaskQueue.tsx
src/components/factorio/: AgentChatPalette.tsx  AgentPicker.tsx  BeltRouter.ts  FactorioCanvas.tsx  FactorioRenderer.ts  agent-picker.css  grid.ts  index.ts  sprites.ts
src/components/layout/: RTSLayout.tsx  SelectionBox.tsx
src/components/mainview/: ActivityStream.tsx  FileExplorer.tsx  MainView.tsx
src/components/minimap/: AgentMarker.tsx  FileTree.tsx  FogOverlay.tsx  Minimap.tsx
src/components/resources/: ResourceBar.tsx  TokenMeter.tsx
src/components/units/: AgentCard.tsx  HealthBar.tsx  ManaBar.tsx  UnitPortraits.tsx
src/hooks/: index.ts  useAgent.ts  useSelection.ts  useTauriEvents.ts
src/stores/: agentStore.ts  factoryStore.ts  index.ts  metricsStore.ts  projectStore.ts  registryStore.ts  uiStore.ts
src/styles/: rts.css
src/types/: acp.ts  agent.ts  index.ts  project.ts  registry.ts
