[package]
name = "agent-commander"
version = "0.1.0"
description = "RTS-Style Agent Management Application"
authors = ["Agent Commander Team"]
edition = "2021"

[lib]
name = "agent_commander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
notify = "7"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"
once_cell = "1"

