[package]
name = "acptorio"
version = "0.1.0"
description = "Factorio-style ACP Agent Management"
authors = ["acptorio"]
edition = "2021"

[lib]
name = "acptorio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
notify = "7"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
zip = "2"
flate2 = "1"
tar = "0.4"

